--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,40 @@
 version: '3.8'
 
 volumes:
-  docker-volume:
+  mysql-volume:
 
 services:
   web:
     image: nginx:1.18
     ports:
-      - '80:80'
+      - ${WEB_PORT}:80
     depends_on:
       - app
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./src/:/var/www/html
+
   app:
     build: ./docker/php
     volumes:
       - ./src/:/var/www/html
+    environment:
+      - DB_CONNECTION=${DB_CONNECTION}
+      - DB_HOST=db
+      - DB_PORT=${DB_PORT}
+      - DB_DATABASE=${DB_NAME}
+      - DB_USERNAME=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+
   db:
     image: mysql:5.7
     ports:
-      - '3306:3306'
+      - ${DB_PORT}:3306
     environment:
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_USER: ${USER_NAME}
-      MYSQL_PASSWORD: ${PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD}
       TZ: 'Asia/Tokyo'
     volumes:
-      - docker-volume:/var/lib/mysql
+      - mysql-volume:/var/lib/mysql
