--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -8,6 +8,8 @@ COPY --from=composer:1.10 /usr/bin/composer /usr/bin/composer
 COPY --from=node:10.22 /usr/local/bin /usr/local/bin
 COPY --from=node:10.22 /usr/local/lib /usr/local/lib
 
+COPY php.ini /usr/local/etc/php/php.ini
+
 RUN apt-get update \
 && apt-get install -y \
 git \
